{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 1780,
  "lineage": "a9b05862-4feb-2985-c389-b4eefd51953e",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "4388",
                "uid": "4b371f96-ebe6-436a-a696-64e0fe09b4f0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.auth",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-02d8b9464de4ed270",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02d8b9464de4ed270",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0548a6e7072c6eb67"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "education-eks-etCx536Y-cluster-2024092114022242990000000d",
            "name_prefix": "education-eks-etCx536Y-cluster-",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "education-eks-etCx536Y-cluster",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "education-eks-etCx536Y-cluster",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0548a6e7072c6eb67",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0548a6e7072c6eb67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00db4d72eadb82b2c"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d8b9464de4ed270"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d8b9464de4ed270"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d8b9464de4ed270"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d8b9464de4ed270"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d8b9464de4ed270"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d8b9464de4ed270"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "education-eks-etCx536Y-node-2024092114022242110000000b",
            "name_prefix": "education-eks-etCx536Y-node-",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "education-eks-etCx536Y-node",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/cluster/education-eks-etCx536Y": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "education-eks-etCx536Y-node",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/cluster/education-eks-etCx536Y": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3185976762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d8b9464de4ed270",
            "security_group_rule_id": "sgr-0ceb8170ccc1821c3",
            "self": false,
            "source_security_group_id": "sg-0548a6e7072c6eb67",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2769965207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-058850ff1de213a97",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-981228348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-051408eac727408b1",
            "self": false,
            "source_security_group_id": "sg-02d8b9464de4ed270",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1752213880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-0290866fcccd1f604",
            "self": false,
            "source_security_group_id": "sg-02d8b9464de4ed270",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2704461550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-08c1174a916ba7270",
            "self": false,
            "source_security_group_id": "sg-02d8b9464de4ed270",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2993615567",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-0d5fb26251700542c",
            "self": false,
            "source_security_group_id": "sg-02d8b9464de4ed270",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3603939588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-03bf9b5264c82188e",
            "self": false,
            "source_security_group_id": "sg-02d8b9464de4ed270",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-347092427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-00044a6d5ee100e61",
            "self": false,
            "source_security_group_id": "sg-02d8b9464de4ed270",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1534133713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-0a0bac3524d2cd37a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2352691738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-01c71819bc475afb9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-677681653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0548a6e7072c6eb67",
            "security_group_rule_id": "sgr-0c33d52cd33d2fb9f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.eks_node_group",
            "aws_iam_role_policy_attachment.ec2_container_registry",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:network-acl/acl-08b0a320b5f4b8b93",
            "default_network_acl_id": "acl-08b0a320b5f4b8b93",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08b0a320b5f4b8b93",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "473154593366",
            "subnet_ids": [
              "subnet-016c56dc5cc59b6e2",
              "subnet-01fe875b1145c0c14",
              "subnet-0672441ab144d670c",
              "subnet-0dbe93cff179874eb",
              "subnet-0e7d50b0717b3f057",
              "subnet-0fd69cb7fbe62d145"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:route-table/rtb-00c058ba8da6dad24",
            "default_route_table_id": "rtb-00c058ba8da6dad24",
            "id": "rtb-00c058ba8da6dad24",
            "owner_id": "473154593366",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-071da14073e2d7d78",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-071da14073e2d7d78",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0390fcf207c2f74ef",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:elastic-ip/eipalloc-0390fcf207c2f74ef",
            "association_id": "eipassoc-04c96f9c0c0c85d55",
            "domain": "vpc",
            "id": "eipalloc-0390fcf207c2f74ef",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a6a6aa308c88ecf7",
            "private_dns": "ip-10-0-4-7.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.7",
            "public_dns": "ec2-18-136-173-131.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.173.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:internet-gateway/igw-0506a4780199a744b",
            "id": "igw-0506a4780199a744b",
            "owner_id": "473154593366",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0390fcf207c2f74ef",
            "association_id": "eipassoc-04c96f9c0c0c85d55",
            "connectivity_type": "public",
            "id": "nat-0bc1ca15a74c2cf3d",
            "network_interface_id": "eni-0a6a6aa308c88ecf7",
            "private_ip": "10.0.4.7",
            "public_ip": "18.136.173.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fe875b1145c0c14",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-015c8c6292d9bc8d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bc1ca15a74c2cf3d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015c8c6292d9bc8d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0506a4780199a744b",
            "id": "r-rtb-062066b07e2fdf8a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062066b07e2fdf8a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:route-table/rtb-015c8c6292d9bc8d8",
            "id": "rtb-015c8c6292d9bc8d8",
            "owner_id": "473154593366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc1ca15a74c2cf3d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:route-table/rtb-062066b07e2fdf8a1",
            "id": "rtb-062066b07e2fdf8a1",
            "owner_id": "473154593366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0506a4780199a744b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c72a959ac9b75d6f",
            "route_table_id": "rtb-015c8c6292d9bc8d8",
            "subnet_id": "subnet-0fd69cb7fbe62d145"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009b070aca43e653a",
            "route_table_id": "rtb-015c8c6292d9bc8d8",
            "subnet_id": "subnet-0dbe93cff179874eb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01311c279b26c84f2",
            "route_table_id": "rtb-015c8c6292d9bc8d8",
            "subnet_id": "subnet-016c56dc5cc59b6e2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036f6aaa7181dea00",
            "route_table_id": "rtb-062066b07e2fdf8a1",
            "subnet_id": "subnet-01fe875b1145c0c14"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b2c086ff8c1dde",
            "route_table_id": "rtb-062066b07e2fdf8a1",
            "subnet_id": "subnet-0e7d50b0717b3f057"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c87a8dc8264fec45",
            "route_table_id": "rtb-062066b07e2fdf8a1",
            "subnet_id": "subnet-0672441ab144d670c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0fd69cb7fbe62d145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd69cb7fbe62d145",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0dbe93cff179874eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbe93cff179874eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-016c56dc5cc59b6e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c56dc5cc59b6e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-01fe875b1145c0c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fe875b1145c0c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0e7d50b0717b3f057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7d50b0717b3f057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0672441ab144d670c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0672441ab144d670c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01c7ddd230bc88a32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc/vpc-01c7ddd230bc88a32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b0a320b5f4b8b93",
            "default_route_table_id": "rtb-00c058ba8da6dad24",
            "default_security_group_id": "sg-071da14073e2d7d78",
            "dhcp_options_id": "dopt-0c8460a0e8b4bef2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c7ddd230bc88a32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c058ba8da6dad24",
            "owner_id": "473154593366",
            "tags": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-instance",
              "Owner": "Aditya Kristianto",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}